syntax = "proto3";

package helloworld;
option go_package = "protos";

service HelloWorld {
  // Connects to the server to get an id to use in other messages
  rpc Connect (ConnectRequest) returns (IdMessage) {}
  // Let the server know the client is leaving
  rpc Leave (IdMessage) returns (LeaveReply) {}

  // Subscribe to server-side stream
  rpc Subscribe (IdMessage) returns (stream Notification) {}
  // Request a notification from the server
  rpc GetNotification (IdMessage) returns (Notification) {}

  // Let the server know the client's move for the game
  rpc Play (PlayRequest) returns (PlayReply) {}
}

// ---- General message - Could be better named
message IdMessage {
  int32 id = 1;
}

// ---- Connect
message ConnectRequest {
  string name = 1;
}

message ConnectReply {
  // Id of the player
  int32 id = 1;
}

// ---- Leave
message LeaveReply {
  // Time spent on the server in ms
  int64 time = 1;
}


// ---- Notification
message Notification {
  // Max number of players
  int32 max_players = 1;
  int32 n_players = 2;

  // Name of the player joind the world
  string joined = 3;

  // Name of the player leaving the world
  string left = 4;

  // Game specific fields
  string message = 5;
  string author = 6;
  int32 author_id = 7;
}

// ---- Play
message PlayRequest {
  // Id of the player
  int32 id = 1;

  // Message to transmit
  string message = 2;
}

message PlayReply {
  // Accepted status
  bool accepted = 1;

  // Response message
  string message = 2;
}
